tests/elab/field_proj/synth_field_proj.snapshot
exit status: 1

stdout = """
def a: Int = {x = 5}.x;
types of expressions:
8..13 = {x: Int}
8..15 = Int
11..12 = Int

def b: Int = {x = 5, y = false}.x;
types of expressions:
26..39 = {x: Int, y: Bool}
26..41 = Int
29..30 = Int
33..38 = Bool

def c: Bool = {x = 5, y = false}.y;
types of expressions:
52..65 = {x: Int, y: Bool}
52..67 = Bool
55..56 = Int
59..64 = Bool

def error1: #error = #error;
types of expressions:
83..85 = ()
83..87 = #error

def error2: #error = #error;
types of expressions:
102..107 = {z: Int}
102..109 = #error
105..106 = Int

def error3: #error = #error;
types of expressions:
124..127 = Type
124..129 = #error
"""

stderr = """
error: field `x` not found
  ┌─ tests/elab/field_proj/synth_field_proj.pion:7:14
  │
7 │ def error1 = {}.x;
  │              ^^^^
  │
  = help: the type of this expression is `()`

error: field `x` not found
  ┌─ tests/elab/field_proj/synth_field_proj.pion:8:14
  │
8 │ def error2 = {z=0}.x;
  │              ^^^^^^^
  │
  = help: the type of this expression is `{z: Int}`

error: tried to access field `x` of non-record expression
  ┌─ tests/elab/field_proj/synth_field_proj.pion:9:14
  │
9 │ def error3 = Int.x;
  │              ^^^^^
  │
  = help: the type of this expression is `Type`

aborting due to 3 previous errors
"""
